# PointMamba

./: main.py  pyproject.toml  requirements.txt
pointmamba/datasets/: ModelNetDataset.py  ScanObjectNNDataset.py  ShapeNet55Dataset.py  __init__.py  build.py
pointmamba/models/: build.py  point_mamba.py
pointmamba/part_segmentation/: dataset.py  main.py
pointmamba/tools/: builder.py  runner.py  runner_finetune.py  runner_pretrain.py
pointmamba/utils/: misc.py  registry.py
